Fix spacing errors and remove extra character

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ html {
   animation: hand-rotate 6s linear infinite;
 }
 
-@@keyframes hand-rotate {
+@keyframes hand-rotate {
 
   0% {
     transform: rotate(0deg);
